--- a/Front/Angular_Front v2/src/app/ide/ide.component.html
+++ b/Front/Angular_Front v2/src/app/ide/ide.component.html
@@ -12,7 +12,7 @@
       <span class="span-50"></span>
       <span class="span-100"></span>
     </div>
-  
+
         <div id="div1"class="row-lg-2 row-sm-2" >
          
             <select class='select-option' 
@@ -27,14 +27,23 @@
             <button id="buttonRun" class="btn btn-icon btn-3 btn-primary btn-lg pull-center" type="button" (click)="run()">
                 <span class="btn-inner--text">Tester code</span>
               </button>
-          
+              <div class="blocAlert" *ngIf="stock.length>0">
+                <ngb-alert [type]="stock[0].type"  [dismissible]="true"  (close)="close(stock[0])" >
+                  <ng-container *ngIf="stock[0].icon">
+                    <div class="alert-inner--icon">
+                        <i class="{{stock[0].icon}}"></i>
+                    </div>
+                  </ng-container>
+                  <span class="alert-inner--text">  <strong>{{stock[0].strong}} </strong>{{ stock[0].message }}</span>
+                </ngb-alert>
+              </div>
   
         </div>
         <div class="wrapper1" >
           <div id="blockFiles"  >
             <ul id="listFileName"  >
               <li   *ngFor="let item of obj.files">
-                <div style="float:right;" *ngIf=!item.edit (click)="deletefile()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                <div style="float:right;" *ngIf=!item.edit (click)="deletefile(item)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                   <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                   <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                   </svg>
