--- a/Front/Angular_Front v2/src/app/sections/tabs-section/tabs-section.component.html
+++ b/Front/Angular_Front v2/src/app/sections/tabs-section/tabs-section.component.html
@@ -12,10 +12,8 @@
                 <i ></i> main.py
               </ng-template>
                 <ng-template ngbTabContent>
-                  <pre >
-                    from test import hello
-
-                    print(hello())
+                  <pre>
+                    <code [innerHTML]="codePython_1"></code>
                   </pre>
             
                 </ng-template>
@@ -25,12 +23,9 @@
                 <i ></i> test.py
               </ng-template>
                 <ng-template ngbTabContent>
-                   <pre ngNonBindable>
-                     def hello():
-                      toto = "Bonjour"
-                      tata = " compilateur!"
-                      return(toto+tata)&#123;&#125;
-                   </pre>
+                  <pre>
+                    <code [innerHTML]="codePython_2"></code>
+                  </pre>
                 </ng-template>
             </ngb-tab>
 
