--- a/Front/Angular_Front v2/src/app/sections/sections.component.html
+++ b/Front/Angular_Front v2/src/app/sections/sections.component.html
@@ -1,7 +1,7 @@
 
 
-<app-inputs-section></app-inputs-section>
 
+<app-text-section></app-text-section>
 <section class="section section-components">
   <app-tabs-section></app-tabs-section>
 
