--- a/Front/Angular_Front v2/src/app/home/home.component.html
+++ b/Front/Angular_Front v2/src/app/home/home.component.html
@@ -20,7 +20,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
               <img src="./assets/img/brand/compilator.png" style="width: 200px;" class="img-fluid">
-              <p class="lead text-white">A beautiful Design System for Bootstrap 4 and Angular 7. It's Free and Open Source.</p>
+              <p class="lead text-white">PFE Projet</p>
               
 
             </div>
