--- a/Front/Angular_Front v2/src/app/home/home.component.html
+++ b/Front/Angular_Front v2/src/app/home/home.component.html
@@ -19,8 +19,8 @@
         <div class="col px-0">
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
-              <img src="./assets/img/brand/compilator.png" style="width: 200px;" class="img-fluid">
-              <p class="lead text-white">PFE Projet</p>
+              <img src="./assets/img/brand/OCE2.png" style="width: 200px;" class="img-fluid">
+              <p class="lead text-white">Projet PFE  - Ordinary Code Execution </p>
               
 
             </div>
